--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bare-typescript-node-project",
+  "name": "skill-scrape",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
